# Fine-Tune-Models

./: .gitignore  README.md  RUNBOOK.md  pyproject.toml
data/questions/: bank.jsonl
docs/results/: 2026-06-01-stage0.md
eval/: eval_set.jsonl  make_eval_set.py  run_eval.py  run_eval_hf.py
macro_ds/: __init__.py  agent.py  config.py  dataset.py  domains.py  drivers.py  filtering.py  formatting.py  judge.py  mask_check.py  metrics.py  prompts.py  questions.py  schema.py  tools.py
search-fine-tuned-model/: RUNBOOK.md
serve/: run_agent.py  serve_vllm.sh
tests/: conftest.py  test_agent_loop.py  test_dataset_convert.py  test_domains.py  test_drivers.py  test_filtering.py  test_formatting.py  test_generate_smoke.py  test_judge.py  test_mask_alignment.py  test_metrics.py  test_prompts.py  test_questions.py  test_schema.py  test_tools.py
train/: check_template_parity.py  kaggle_train_qlora.ipynb  qlora_qwen3_8b.yaml  train.sh  train_qlora.py
