[project]
name = "macro-ds"
version = "0.1.0"
description = "Distill GPT agent traces into a QLoRA fine-tune of Qwen3-8B for global-macro deep research"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "python-dotenv>=1.0",
    "tenacity>=8.5",
    "pydantic>=2.7",
    "transformers>=4.51",
    "datasets>=2.20",
    "tokenizers>=0.20",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["macro_ds*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "network: tests that require network access (e.g. downloading the Qwen3 tokenizer)",
]
